<resources>
    <string name="app_name">Clic &amp; Visit</string>
    <string name="global_ok">Ok</string>
    <string name="global_cancel">Annuler</string>
    <string name="global_yes">Oui</string>
    <string name="global_no">Non</string>
    <string name="global_empty"></string>
    <string name="global_save">Enregistrer</string>
    <string name="global_error_server">Une erreur est survenue. Merci de réessayer plus tard.</string>
    <string name="global_error_unavailable_network">Merci de vérifier votre connexion.</string>
    <string name="global_error_otp">Code d\'activation erroné</string>
    <string name="global_error_email_exist">Cette adresse email est déjà utilisée</string>
    <string name="global_error_invalid_email_format">Veuillez saisir une adresse e-mail valide.</string>
    <string name="global_error_connection">Merci de vérifier votre connexion.</string>
    <string name="global_error_legal_notice">Merci d\'accepter les règlements du jeu et les mentions légales pour vous inscrire.</string>
    <string name="global_error_empty">Veuillez remplir tous les champs.</string>
    <string name="global_error_password_length">Veuillez saisir un mot de passe qui contient au moins 6 caractères.</string>
    <string name="global_error_first_length">Veuillez saisir un prénom qui contient au maximum 25 caractères.</string>
    <string name="global_error_last_length">Veuillez saisir un nom qui contient au maximum 25 caractères.</string>
    <string name="global_error_password_length_max">Veuillez saisir un mot de passe qui contient au maximum 25 caractères.</string>
    <string name="global_error_mail_length_max">Veuillez saisir un e-mail qui contient au maximum 50 caractères.</string>
    <string name="global_error_banned_user">Votre compte a été bloqué.</string>
    <string name="global_error_retry_message">ERROR !! Tap to retry.</string>
    <string name="global_empty_list">No data.</string>
    <string name="global_error_refresh_fail">Refresh failed</string>
    <string name="signin_signin">Se connecter</string>
    <string name="signin_forget_password"><u>Mot de passe oublié?</u></string>
    <string name="signin_no_account">Vous n’avez pas de compte? </string>
    <string name="signin_create_account">Créer votre compte</string>
    <string name="signin_continue">Continuer en tant que </string>
    <string name="signin_visitor">Visiteur</string>
    <string name="signin_inactivated_account">Compte non activé, vérifiez votre boite mail.</string>
    <string name="signin_password_error">Mot de passe incorrecte</string>
    <string name="otp_email">Vérifiez votre adresse email</string>
    <string name="otp_enter_code">Entrer votre code OTP ici</string>
    <string name="otp_no_code">Vous n’avez pas reçu de code</string>
    <string name="otp_click">Cliquez ici</string>
    <string name="otp_next">Suivant</string>
    <string name="signup_you">Vous êtes :</string>
    <string name="signup_user">Particulier</string>
    <string name="signup_pro">Professionel</string>
    <string name="signup_civility">Civilité</string>
    <string name="signup_m">Monsieur</string>
    <string name="signup_f">Madame</string>
    <string name="signup_lastname">Nom</string>
    <string name="signup_firstname">Prénom</string>
    <string name="signup_mail">E-mail</string>
    <string name="signup_phone">Téléphone</string>
    <string name="signup_password">Mot de passe</string>
    <string name="signup_signup">S’inscrire</string>
    <string name="signup_pro_social">Raison sociale</string>
    <string name="signup_pro_siret">Siret</string>
    <string name="signup_pro_password_comfirm">Confirmation du mot de passe</string>
    <string name="home_list">Liste</string>
    <string name="home_card">Carte</string>
    <string name="home_visit">VISITEZ \nMAINTENANT</string>
    <string name="home_meet">P r e n d r e \n Rendez-vous</string>
    <string name="home_meet_details">Prendre Rendez-vous</string>
    <string name="home_details_pro">Pro</string>
    <string name="home_details_m_square">m²</string>
    <string name="home_details_euros">€</string>
    <string name="home_details_conso">Consommations énergétiques</string>
    <string name="home_details_ges">GES</string>
    <string name="home_menu_1">CRITÈRES</string>
    <string name="home_menu_2">DÉPOSER UNE ANNONCE</string>
    <string name="home_menu_3">MES ANNONCES</string>
    <string name="home_menu_4">MON COMPTE</string>
    <string name="home_menu_5">MES RENDEZ-VOUS</string>
    <string name="home_menu_8">MES VISITES</string>
    <string name="home_menu_5_notification">MES RENDEZ-VOUS <font color='#E21F39' size="25">*</font></string>
    <string name="home_menu_8_notification">MES VISITES <font color='#E21F39' size="25">*</font></string>
    <string name="home_menu_6">MES FAVORIS</string>
    <string name="home_menu_7">MES RECHERCHES</string>
    <string name="home_menu_9">Se déconnecter</string>
    <string name="profile_sign_out_msg">Voulez-vous vraiment se déconnecter de votre compte?</string>
    <string name="profile_sign_out">Déconnexion</string>
    <string name="home_popup_title">Alerte suppression</string>
    <string name="home_popup_body">Êtes-vous sûr de vouloir supprimer cette recherche ?</string>
    <string name="home_search_see">VOIR LES BIENS</string>
    <string name="home_search_between">ENTRE</string>
    <string name="home_search_and">ET</string>
    <string name="ad_ads_header">DÉPOSER UNE ANNONCE</string>
    <string name="ad_ads_confirm">Confirmer</string>
    <string name="ad_ads_type_o">TYPE D’ANNONCE <font color='#EF4339'>*</font></string>
    <string name="ad_ads_sale">Vente</string>
    <string name="ad_ads_location">Location</string>
    <string name="ad_ads_type_b">TYPE DE BIEN <font color='#EF4339'>*</font></string>
    <string name="ad_ads_home">Maison</string>
    <string name="ad_ads_desk">Bureau</string>
    <string name="ad_ads_app">Appartement</string>
    <string name="ad_ads_ground">Terrain</string>
    <string name="ad_ads_garage">Garage</string>
    <string name="ad_ads_comm">Commerce</string>
    <string name="ad_ads_nbr">NOMBRE DE PIÈCES <font color='#EF4339'>*</font></string>
    <string name="ad_ads_vp">5 +</string>
    <string name="ad_ads_na">NA</string>
    <string name="ad_ads_surface">SURFACE <font color='#EF4339'>*</font></string>
    <string name="ad_ads_m2">Nombre de m2</string>
    <string name="ad_ads_price_hint">Loyer (charges comprises)</string>
    <string name="ad_ads_price">PRIX <font color='#EF4339'>*</font></string>
    <string name="ad_ads_rent_price">PRIX (CHARGES COMPRISES) <font color='#EF4339'>*</font></string>
    <string name="ad_ads_rent_price_hint">LOYER (CHARGES COMPRISES) <font color='#EF4339'>*</font></string>
    <string name="ad_ads_stage">ÉTAGE</string>
    <string name="ad_ads_on">sur</string>
    <string name="ad_ads_conso">CONSOMMATIONS ÉNERGÉTIQUES</string>
    <string name="ad_ads_ges">GES</string>
    <string name="ad_ads_comp_info">INFORMATIONS COMPLÉMENTAIRES</string>
    <string name="ad_ads_comp_info_txt">300 caractères maximum pour préciser des informations importantes :</string>
    <string name="ad_ads_comp_info_hint">Exemple: Proche de la gare</string>
    <string name="ad_ads_req_fields">Vous devez remplir tous les champs obligatoires.</string>
    <string name="ad_ads_1">CHAMBRE(S)\n</string>
    <string name="ad_ads_2">SUITE(S) \nPARENTALE(S)\n</string>
    <string name="ad_ads_3">SALLE(S) \nDE BAIN\n</string>
    <string name="ad_ads_4">SALLE(S) \nD’EAU\n</string>
    <string name="ad_ads_5">BUREAU(X)\n</string>
    <string name="ad_ads_6">DRESSING\n</string>
    <string name="ad_ads_7">GARAGE(S)\n</string>
    <string name="ad_ads_8">CAVE(S)\n</string>
    <string name="ad_ads_9">BALCON(M2)\n</string>
    <string name="ad_ads_10">TERRASSE(M2)\n</string>
    <string name="ad_ads_11">SURFACE \nTERRAIN(M2)\n</string>
    <string name="ad_ads_12">ANNÉE\n</string>
    <string name="ad_ads_13">PISCINE\n</string>
    <string name="ad_ads_14">PISCINABLE\n</string>
    <string name="ad_ads_15">POOL HOUSE\n</string>
    <string name="ad_ads_16">SANS \nVIS-À-VIS\n</string>
    <string name="ad_ads_17">ASCENSEUR\n</string>
    <string name="ad_ads_18">DUPLEX\n</string>
    <string name="ad_ads_19">TRIPLEX\n</string>
    <string name="ad_ads_20">REZ-DE-\nJARDIN\n</string>
    <string name="ad_ads_131">PISCINE</string>
    <string name="ad_ads_141">PISCINABLE</string>
    <string name="ad_ads_151">POOL HOUSE</string>
    <string name="ad_ads_161">SANS \nVIS-À-VIS</string>
    <string name="ad_ads_171">ASCENSEUR</string>
    <string name="ad_ads_181">DUPLEX</string>
    <string name="ad_ads_191">TRIPLEX</string>
    <string name="ad_ads_201">REZ-DE-\nJARDIN</string>
    <string name="ad_ads_popup_title_1">Veuillez saisir le nombre de</string>
    <string name="ad_ads_popup_title_2">Veuillez saisir la surface de</string>
    <string name="ad_ads_popup_title_3">Veuillez saisir l\'année</string>
    <string name="ad_ads_popup_title_4">Est-ce que votre bien est</string>
    <string name="ad_ads_popup_positive_button_text">Saisir</string>
    <string name="ad_ads_popup_negative_button_text">Annuler</string>
    <string name="ad_ads_popup_input_hint_1">Nombre de</string>
    <string name="ad_ads_popup_input_hint_2">Surface de</string>
    <string name="ad_ads_popup_input_hint_3">Oui</string>
    <string name="ads_details_1">CHAMBRE</string>
    <string name="ads_details_2">CH.PARENTALE</string>
    <string name="ads_details_3">SALLE DE BAIN</string>
    <string name="ads_details_4">SALLE D’EAU</string>
    <string name="ads_details_5">DRESSING</string>
    <string name="ads_details_6">GARAGE</string>
    <string name="ad_ads_loc">LOCALISATION <font color='#EF4339'>*</font></string>
    <string name="ad_ads_city">Ville</string>
    <string name="ad_ads_postal_code">Code Postal</string>
    <string name="ad_ads_address">Rue</string>
    <string name="ad_ads_info">Ces informations n’apparaîtront pas sur l’annonce mais seront envoyées au visiteur lorsque vous aurez confirmé le rendez-vous</string>
    <string name="ad_ads_interphone_name">Nom interphone</string>
    <string name="ad_ads_interphone_code">Code portail</string>
    <string name="ad_ads_other_info">Autre(s) information(s)</string>
    <string name="ad_ads_add_photo">AJOUTER UNE PHOTO PRINCIPALE</string>
    <string name="ad_ads_add_main_photo">Photo principale</string>
    <string name="ad_ads_add_other_photo">AJOUTER D’AUTRES PHOTOS</string>
    <string name="ads_continue">Continuer</string>
    <string name="search_min">Pièces min</string>
    <string name="search_max">Pièces max</string>
    <string name="search_price">BUDGET</string>
    <string name="search_price_min">Prix min</string>
    <string name="search_price_max">Prix max</string>
    <string name="search_surface">SURFACE ENTRE</string>
    <string name="search_surface_min">Surface min</string>
    <string name="search_surface_max">Surface max</string>
    <string name="search_confirm">Confirmer</string>
    <string name="meet_asked">DEMANDE DE RENDEZ-VOUS</string>
    <string name="meet_with">Rendez-vous avec:</string>
    <string name="filter_bottom_sheet_title">Trier</string>
    <string name="filter_bottom_sheet_date">Les plus récents</string>
    <string name="filter_bottom_sheet_price_asc">Prix croissant</string>
    <string name="filter_bottom_sheet_price_desc">Prix décroissant</string>
    <string name="filter_bottom_sheet_surface_asc">Surface croissante</string>
    <string name="filter_bottom_sheet_surface_desc">Surface décroissante</string>
    <string name="package_details_your_city">Votre ville</string>
    <string name="package_send_package_title">Pouvez-vous choisir l\'aéroport de départ et de destination</string>
    <string name="package_send_package_airport_from">Aéroport de départ</string>
    <string name="package_send_package_airport_to">Aéroport d’arrivée</string>
</resources>