<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/main_drawer_menu1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_menu_1"
            android:icon="@drawable/ic_edit"
            android:title="@string/home_menu_1" />
        <item
            android:id="@+id/nav_menu_2"
            android:icon="@drawable/ic_home_plus"
            android:title="@string/home_menu_2" />
        <item
            android:id="@+id/nav_menu_3"
            android:icon="@drawable/ic_home"
            android:title="@string/home_menu_3" />
        <item
            android:id="@+id/nav_menu_4"
            android:icon="@drawable/ic_profile_black"
            android:title="@string/home_menu_4" />
        <item
            android:id="@+id/nav_menu_5"
            android:icon="@drawable/ic_meet"
            android:title="@string/home_menu_5" />
        <item
            android:id="@+id/nav_menu_6"
            android:icon="@drawable/ic_like_black"
            android:title="@string/home_menu_6" />
        <item
            android:id="@+id/nav_menu_7"
            android:icon="@drawable/ic_loop_black"
            android:title="@string/home_menu_7" />
        <item
            android:id="@+id/nav_menu_8"
            android:icon="@drawable/ic_visit"
            android:title="@string/home_menu_8" />

    </group>

    <group
        android:id="@+id/main_drawer_menu3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_11"
            android:checkable="false"
            android:checked="false"
            android:enabled="false"
            android:icon="@null"
            android:title="" />
    </group>

    <group
        android:id="@+id/main_drawer_menu2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_9"
            android:icon="@drawable/ic_disconnect"
            android:title="@string/home_menu_9" />
    </group>

</menu>