<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    tools:context=".ui.home.send.city.CityFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.clickandvisit.ui.home.send.city.CityViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_basic"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_global_36dp"
                android:layout_marginEnd="@dimen/margin_global_36dp"
                android:background="@color/white_basic"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvcity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_global_5dp"
                    android:layout_marginBottom="@dimen/margin_global_36dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/package_send_package_title"
                    android:textColor="@color/black_basic"
                    android:textSize="@dimen/font_25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.clickandvisit.ui.shared.view.CustomTextInputLayout
                    android:id="@+id/customTextInputLayoutCity"
                    style="@style/InputLayout.AppStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.clickandvisit.ui.shared.view.CustomTextInputEditText
                        android:id="@+id/customTextInputEditTextCity"
                        style="@style/InputEditText.AppStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/package_details_your_city"
                        android:textSize="@dimen/font_13sp" />

                </com.clickandvisit.ui.shared.view.CustomTextInputLayout>


                <com.clickandvisit.ui.shared.view.CustomTextInputLayout
                    android:id="@+id/customTextInputLayoutFrom"
                    style="@style/InputLayout.AppStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.clickandvisit.ui.shared.view.CustomTextInputEditText
                        android:id="@+id/customTextInputEditTextFrom"
                        style="@style/InputEditText.AppStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/package_send_package_airport_from"
                        android:textSize="@dimen/font_13sp" />

                </com.clickandvisit.ui.shared.view.CustomTextInputLayout>

                <com.clickandvisit.ui.shared.view.CustomTextInputLayout
                    android:id="@+id/customTextInputLayoutTo"
                    style="@style/InputLayout.AppStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.clickandvisit.ui.shared.view.CustomTextInputEditText
                        android:id="@+id/customTextInputEditTextTo"
                        style="@style/InputEditText.AppStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/package_send_package_airport_to"
                        android:textSize="@dimen/font_13sp" />

                </com.clickandvisit.ui.shared.view.CustomTextInputLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>